--- a/goliver-therapeutics-is-the-winner-of-the-french-governments/index9ed2.html
+++ b/goliver-therapeutics-is-the-winner-of-the-french-governments/index9ed2.html
@@ -17,7 +17,8 @@
 <link rel="alternate" hreflang="fr" href="../goliver-therapeutics-laureate-de-lappel-a-projets/index.html" />
 
 		<!-- All in One SEO Pro 4.1.0.1 -->
-		<title>GoLiver Therapeutics is the winner of the French Government‘s | Golivertx</title>
+		<title>golivertherapeutics</title>
+		<meta name="description" content="Goliver Therapeutics is a spin-off of CRTI UMR1064, ITUN, Nantes University Hospital, specializing in the development of Innovative Therapy Drugs (IMT)."/>
 		<link rel="canonical" href="index9ed2.html?lang=en" />
 		<meta name="google" content="nositelinkssearchbox" />
 		<script type="application/ld+json" class="aioseo-schema">
