--- a/goliver-therapeutics-laureat-biotech-de-france-tech-transfer-invest-2019/index.html
+++ b/goliver-therapeutics-laureat-biotech-de-france-tech-transfer-invest-2019/index.html
@@ -16,7 +16,8 @@
 	<link rel="alternate" hreflang="fr" href="index.html" />
 
 		<!-- All in One SEO Pro 4.1.0.1 -->
-		<title>GOLIVER THERAPEUTICS | LAURÉAT BIOTECH DE FRANCE TECH TRANSFER INVEST 2019 | Golivertx</title>
+		<<title>golivertherapeutics</title>
+		<meta name="description" content="Goliver Therapeutics is a spin-off of CRTI UMR1064, ITUN, Nantes University Hospital, specializing in the development of Innovative Therapy Drugs (IMT)."/>
 		<link rel="canonical" href="index.html" />
 		<meta name="google" content="nositelinkssearchbox" />
 		<script type="application/ld+json" class="aioseo-schema">
