--- a/goliver-therapeutics-developpe-une-alternative-a-la-greffe-du-foie/index.html
+++ b/goliver-therapeutics-developpe-une-alternative-a-la-greffe-du-foie/index.html
@@ -16,7 +16,7 @@
 	<link rel="alternate" hreflang="fr" href="index.html" />
 
 		<!-- All in One SEO Pro 4.1.0.1 -->
-		<title>golivertherapeutics</title>
+		<title>goliver therapy therapeutics</title>
 		<meta name="description" content="Goliver Therapeutics is a spin-off of CRTI UMR1064, ITUN, Nantes University Hospital, specializing in the development of Innovative Therapy Drugs (IMT)."/>
 		<link rel="canonical" href="index.html" />
 		<meta name="google" content="nositelinkssearchbox" />
