--- a/(therapy)/index9ed2.html
+++ b/(therapy)/index9ed2.html
@@ -1807,10 +1807,12 @@ billion cells to repair the liver without graft. (2018/2020)</p>
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=weber+A+inserm+liver" target="_blank" rel="noopener noreferrer">Weber A : Inserm &#8211; Liver</a><br />
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Franco+D[Author]+liver+france" target="_blank" rel="noopener noreferrer">Franco D : AP-HP &#8211; Liver</a><br />
 <a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=kilens+stem+cell" target="_blank" rel="noopener noreferrer">Kilens S : Inserm &#8211; Stem Cell</a></p></div></div></div><div class="wpb_column vc_column_container vc_col-sm-3"><div class="vc_column-inner"><div class="wpb_wrapper"><h2 class="sc_title  sc_title_left" style="font-weight:700;color:#ffffff;">NEWS</h2><a href="news-about-golivertx/index9ed2.html?lang=en"  class="sc_button  sc_button_skin_dark sc_button_style_regular sc_button_size_medium" >VIEW ARTICLES</a></div></div></div><div class="wpb_column vc_column_container vc_col-sm-3"><div class="vc_column-inner"><div class="wpb_wrapper"><h2 class="sc_title  sc_title_left" style="font-weight:700;color:#ffffff;">INFORMATIONS</h2><p  class="sc_text  sc_text_left">GoLiver Therapeutics<br />
-8 quai Moncousu &#8211; BP 70721<br />
-44007 Nantes Cedex, France</p>
-<p>Tel: 33 (0)782721251<br />
-Mail: secretariat@golivertx.com</p></div></div></div></div>
+	867 Boylston St<br />
+	Suite 500<br />
+	Unit #479<br />
+	Boston, MA 02116</p>
+<p>Tel: (617)694-0086<br />>
+Mail: Info@golivertherapeutics.com</p></div></div></div></div>
  
 			</div>
 			<div class="postSharing hoverUnderline"><div class="postSpan postShare share"></div></div>
